<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detalle_mascota"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.juandanielmoncayo.veterinaria.DetalleMascotaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/informacion_mascota"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/eliminarmascota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/buttn"
            android:onClick="eliminarmascota"
            android:text="@string/borrar" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_mascota"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/campoIdMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="1094" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_mascota"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/campoNombreMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Juan Moncayo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/raza"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/campoRaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="75845682" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/informacion_dueño"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/documento_identificacion_usuario"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/campoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="1094" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_usuario"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/campoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Juan Moncayo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefono_usuario"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/campoTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="75845682" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/buttn"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:onClick="salir"
        android:padding="10dp"
        android:text="@string/regresar" />


</LinearLayout>
