<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro_usuarios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juandanielmoncayo.veterinaria.RegistroUsuariosActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/registrar_usuario"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/documento_identificacion_usuario"
        android:numeric="integer" />

    <EditText
        android:id="@+id/campoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_usuario" />

    <EditText
        android:id="@+id/campoTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono_usuario"
        android:phoneNumber="true" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttn"
        android:onClick="onClick"
        android:padding="10dp"
        android:text="@string/registrar_usuario" />

</LinearLayout>
