<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro_mascota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.juandanielmoncayo.veterinaria.RegistroMascotaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/registrar_nueva_mascota"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/campoNombreMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_mascota" />

    <EditText
        android:id="@+id/campoRaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/raza" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/propietario"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/comboDuenioMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRegistroMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttn"
        android:onClick="onClick"
        android:padding="20dp"
        android:text="@string/registrar_nueva_mascota" />


</LinearLayout>
