<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/id_veterinaria"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <TextView
        android:id="@+id/idveterinaria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="12"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nombre_veterinaria"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <TextView
        android:id="@+id/nombreveterinaria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="Juan Moncayo"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/telefono_usuario"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <TextView
        android:id="@+id/telefonoveterinaria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="7987878708"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/barrio"
        android:textSize="18sp"
        android:textStyle="bold" />
    />

    <TextView
        android:id="@+id/barrioveterinaria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:text="la floresta"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/buttn"
        android:foregroundGravity="center_horizontal"
        android:gravity="center_horizontal"
        android:onClick="salir"
        android:padding="10dp"
        android:text="@string/regresar" />

</LinearLayout>