<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/documento_identificacion_usuario"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textDocumento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1094899"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_usuario"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Juan Moncayo"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono_usuario"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3004535326"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/idImagen"
                android:layout_marginTop="11dp" />

        </LinearLayout>



</RelativeLayout>